Accessibility improvements and updated README

--- a/captcha.html
+++ b/captcha.html
@@ -3,6 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>reCAPTCHA Verification</title>
 
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.0/css/all.css">        
@@ -228,7 +229,7 @@
     <div class="container m-p">    
         <div id="checkbox-window" class="checkbox-window m-p block">
             <div class="checkbox-container m-p">
-                <button type="button" id="checkbox" class="checkbox m-p line-normal"></button>
+                <button type="button" id="checkbox" class="checkbox m-p line-normal" aria-label="Verify you are not a robot"></button>
             </div>
             <p class="im-not-a-robot m-p line-normal">I'm not a robot</p>
             <img src="https://www.google.com/recaptcha/about/images/reCAPTCHA-logo@2x.png" class="captcha-logo line-normal" alt="">
