--- a/index.html
+++ b/index.html
@@ -153,12 +153,6 @@
 
         .checkbox:hover {
             border: 2px solid #b2b2b2;
-        }
-
-        .im-not-a-robot {
-            position: relative;
-            left: 52px;
-            bottom: 3px;
             font-size: 15px;
             color: #282727;
         }
@@ -313,7 +307,7 @@
     <div class="container m-p">    
         <div id="checkbox-window" class="checkbox-window m-p block">
             <div class="checkbox-container m-p">
-                <button type="button" id="checkbox" class="checkbox m-p line-normal"></button>
+                <button type="button" id="checkbox" class="checkbox m-p line-normal" aria-label="Verify you are not a robot"></button>
             </div>
             <p class="im-not-a-robot m-p line-normal">I'm not a robot</p>
             <img src="https://www.google.com/recaptcha/about/images/reCAPTCHA-logo@2x.png" class="captcha-logo line-normal" alt="">
